--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "node_modules/express"]
 	path = node_modules/express
 	url = git://github.com/visionmedia/express.git
+[submodule "node_modules/mongoose"]
+	path = node_modules/mongoose
+	url = https://github.com/LearnBoost/mongoose.git
