--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "node_modules/mongoose"]
 	path = node_modules/mongoose
 	url = https://github.com/LearnBoost/mongoose.git
+[submodule "node_modules/less"]
+	path = node_modules/less
+	url = git://github.com/cloudhead/less.js.git
