some fix and change layout colors

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ name: O blog do Sidney Filho
 description: A página pessoal do Sidney
 destination: _site
 permalink: /:categories/:title
-exclude: [make.bat, .nojekyll]
+exclude: [make.cmd, .nojekyll]
