--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: http://localhost
+url: http://sidneylimafilho.com.br
 name: O blog do Sidney Filho
 description: A página pessoal do Sidney
 destination: _site
