--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ name: O blog do Sidney Filho
 description: A página pessoal do Sidney
 destination: _site
 permalink: /:categories/:title
+markdown: kramdown
 exclude: [make.cmd, .nojekyll, CNAME]
